2008-06-30  Shunichi Fuji  <palglowr@gmail.com>

	* libpp/callgraph_container.cpp: Fix compile warning
	  using gcc 4.3.1 for uninitialized variable

2008-06-23  Maynard Johnson <maynardj@us.ibm.com>

	* daemon/opd_stats.c: Do not force printing of sample_invalid_eip
	  since this is not available from pre-2.6.24 kernels

2008-06-23  Maynard Johnson <maynardj@us.ibm.com>

	* opjitconv/opjitconv.c: Switch to special user account
	  after determining whether or not we have JIT dump files
	  to process in order to avoid unnecessary error messages
	  in oprofiled.log

2008-06-11  Maynard Johnson <maynardj@us.ibm.com>

	* configure.in:
	* Makefile.am:
	* agents/Makefile.am:
	* doc/oprofile.xml: Change make install error to warning
	  if special user account does not exist

2008-06-11  Maynard Johnson <maynardj@us.ibm.com>

	* Makefile.am: Add README_PACKAGERS to EXTRA_DIST

2008-06-03  Will Cohen  <wcohen@redhat.com>

	* libop/op_alloc_counter.c: Use counters actually available.

2008-05-21  George McCollister  <georgem@novatech-llc.com>

	* daemon/opd_cookie.c: Fix ARM big-endian syscall

2008-05-20  Jason Yeh  <jason.yeh@amd.com>

	* events/x86_64/hammer/events:
	* events/x86_64/hammer/unit_masks:
	* events/x86_64/family10/events:
	* events/x86_64/family10/unit_masks: update for recent BKDG
	revisions

2008-05-19  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/profile_spec.cpp: Fix bug in differential profile
	  when using archive spec and an image spec

2008-05-19  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/format_output.cpp:
	* libpp/xml_utils.cpp:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h: Do not to try to get symbol contents
	  for artificial symbols and other cases where no symbol contents
	  exist.  Also change to use scoped array for symbol contents
	  instead of automatic allocation from the stack to avoid allocation
	  attempt exceeding max stack size.

2008-05-09  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: