@@ -9,9 +9,9 @@ libopagent_la_SOURCES = opagent.c \
 
 EXTRA_DIST = opagent_symbols.ver
 
-nodist_libopagent_la_SOURCES = bfdheader.h
 
 libopagent_la_CFLAGS = -fPIC -I ${top_srcdir}/libop -I ${top_srcdir}/libutil
+libopagent_la_LIBADD = $(BFD_LIBS)
 
 # Do not increment the major version for this library except to
 # intentionally break backward ABI compatability.  Use the
@@ -22,22 +22,4 @@ libopagent_la_CFLAGS = -fPIC -I ${top_srcdir}/libop -I ${top_srcdir}/libutil
 libopagent_la_LDFLAGS = -version-info  1:0:0 \
 			-Wl,--version-script=${top_srcdir}/libopagent/opagent_symbols.ver
 
-
-# the bfdheader.h is generated by bfddefines at compile time
-# to extract the machine and architecture ids we need
-# to write out a bfd file for this arch.
-# automake does not support modelling such dependency, but
-# has the variable BUILT_SOURCE for all sources that need to
-# be made before the actual compile
-# see automake info page section 8.4.1
-BUILT_SOURCES = bfdheader.h
-
-CLEANFILES = bfdheader.h
-
-noinst_PROGRAMS = bfddefines
-
-bfddefines_LDADD = $(BFD_LIBS)
-
-bfdheader.h:	bfddefines
-	./bfddefines bfddefines > $@
 
